--- a/nginx/templates/default/default-site.erb
+++ b/nginx/templates/default/default-site.erb
@@ -7,5 +7,8 @@ server {
   location / {
     root   /var/www/nginx-default;
     index  index.html index.htm;
+    default_type "text/html";
+   try_files $uri.html $uri $uri/ /index.html;
+   access_log off;
   }
 }
