--- a/nginx/templates/default/site.erb
+++ b/nginx/templates/default/site.erb
@@ -4,7 +4,7 @@ server {
   access_log  <%= node[:nginx][:log_dir] %>/<%= @application[:domains].first %>.access.log;
 
   location / {
-    root   <%= @application[:absolute_document_root] %>;
+    root   <%= @application[:absolute_document_root] %>/www/;
     index  index.html index.htm index.php;
     default_type "text/html";
     try_files $uri.html $uri $uri/ /index.html;
