--- a/nginx/templates/default/default-site.erb
+++ b/nginx/templates/default/default-site.erb
@@ -3,9 +3,9 @@ server {
   server_name  127.0.0.1;
 
   access_log  <%= node[:nginx][:log_dir] %>/localhost.access.log;
-
+  
+  root   /var/www/nginx-default/www/;
   location / {
-    root   /var/www/nginx-default;
     index  index.html index.htm;
     default_type "text/html";
    try_files $uri.html $uri $uri/ /index.html;
