--- a/nginx/templates/default/site.erb
+++ b/nginx/templates/default/site.erb
@@ -2,10 +2,9 @@ server {
   listen   80;
   server_name  <%= @application[:domains].join(" ") %> <%= node[:hostname] %>;
   access_log  <%= node[:nginx][:log_dir] %>/<%= @application[:domains].first %>.access.log;
-  
-  root   <%= @application[:absolute_document_root] %>/www/;
-  
+
   location / {
+   root   <%= @application[:absolute_document_root] %>;
     index  index.html index.htm index.php;
     default_type "text/html";
     try_files $uri.html $uri $uri/ /index.html;
