--- a/nginx/templates/default/default-site.erb
+++ b/nginx/templates/default/default-site.erb
@@ -4,8 +4,8 @@ server {
 
   access_log  <%= node[:nginx][:log_dir] %>/localhost.access.log;
   
-  root   /var/www/nginx-default/www/;
   location / {
+    root   /var/www/nginx-default;
     index  index.html index.htm;
     default_type "text/html";
    try_files $uri.html $uri $uri/ /index.html;
